--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.27.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.6",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
